a usable flume and runnable spark apps